RESOLVED FIXED184624
Collection fragment identifiers don't use PostScript names
https://bugs.webkit.org/show_bug.cgi?id=184624
Summary Collection fragment identifiers don't use PostScript names
Myles C. Maxfield
Reported 2018-04-13 21:11:00 PDT
We implemented an old version of the spec which uses integer indices instead of PostScript names.
Attachments
Patch (9.76 KB, patch)
2018-04-17 12:18 PDT, Myles C. Maxfield
no flags
Patch (9.84 KB, patch)
2018-04-30 18:38 PDT, Myles C. Maxfield
no flags
Patch (23.01 KB, patch)
2018-05-01 19:49 PDT, Myles C. Maxfield
no flags
Patch (23.03 KB, patch)
2018-05-01 20:31 PDT, Myles C. Maxfield
no flags
Patch (23.71 KB, patch)
2018-05-01 21:19 PDT, Myles C. Maxfield
no flags
Radar WebKit Bug Importer
Comment 1 2018-04-13 21:12:23 PDT
Myles C. Maxfield
Comment 2 2018-04-17 12:18:50 PDT
EWS Watchlist
Comment 3 2018-04-17 12:21:17 PDT
Attachment 338141 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 4 2018-04-30 18:38:05 PDT
EWS Watchlist
Comment 5 2018-04-30 18:40:24 PDT
Attachment 339169 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 6 2018-05-01 19:49:32 PDT
Myles C. Maxfield
Comment 7 2018-05-01 20:31:04 PDT
Myles C. Maxfield
Comment 8 2018-05-01 21:19:22 PDT
WebKit Commit Bot
Comment 9 2018-05-02 13:34:13 PDT
Comment on attachment 339272 [details] Patch Clearing flags on attachment: 339272 Committed r231259: <https://trac.webkit.org/changeset/231259>
WebKit Commit Bot
Comment 10 2018-05-02 13:34:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.