Collection fragment identifiers don't use PostScript names https://bugs.webkit.org/show_bug.cgi?id=184624 Source/WebCore:

<rdar://problem/39432089>

Reviewed by Simon Fraser.

In a previous version of the CSS Fonts spec, there was text saying that items in font collections
should be 1-indexed (so the first item would be MyFonts.ttc#1). However, this is unfortunate because
inserting an item into the middle of a collection would throw off all content that uses the file.
Instead, the spec has since changed to use PostScript names (so the content instead would say
MyFonts.ttc#MyFont-Regular).

Test: fast/text/font-collection.html

* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::load):
* loader/cache/CachedFont.cpp:
(WebCore::CachedFont::calculateItemInCollection const):
(WebCore::CachedFont::ensureCustomFontData):
(WebCore::CachedFont::createCustomFontData):
(WebCore::CachedFont::calculateIndex const): Deleted.
* loader/cache/CachedFont.h:
* platform/graphics/mac/FontCustomPlatformData.cpp:
(WebCore::createFontCustomPlatformData):
* platform/graphics/mac/FontCustomPlatformData.h:

LayoutTests:

Reviewed by Simon Fraser.

* fast/text/font-collection-expected.html:
* fast/text/font-collection.html:
* fast/text/resources/collection.ttc: I generated this font collection by hand. The "Ahemerator" font inside it is missing the
"A" glyph.


Canonical link: https://commits.webkit.org/200703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231259 268f45cc-cd09-0410-ab3c-d52691b4dbfc