Source/WebCore/platform/graphics/mac/FontCustomPlatformData.cpp
@@ -51,7 +51,7 @@ FontPlatformData FontCustomPlatformData::fontPlatformData(const FontDescription&
     return FontPlatformData(font.get(), size, bold, italic, orientation, widthVariant, fontDescription.textRenderingMode());
 }
 
-std::unique_ptr<FontCustomPlatformData> createFontCustomPlatformData(SharedBuffer& buffer, unsigned index)
+std::unique_ptr<FontCustomPlatformData> createFontCustomPlatformData(SharedBuffer& buffer, const String& itemInCollection)
 {
     RetainPtr<CFDataRef> bufferData = buffer.createCFData();
 
@@ -63,17 +63,26 @@ std::unique_ptr<FontCustomPlatformData> createFontCustomPlatformData(SharedBuffe
     auto length = CFArrayGetCount(array.get());
     if (length <= 0)
         return nullptr;
-    if (index > 0)
-        --index;
-    if (index >= static_cast<unsigned>(length))
-        index = 0;
-    fontDescriptor = static_cast<CTFontDescriptorRef>(CFArrayGetValueAtIndex(array.get(), index));
+    if (!itemInCollection.isNull()) {
+        if (auto desiredName = itemInCollection.createCFString()) {
+            for (CFIndex i = 0; i < length; ++i) {
+                auto candidate = static_cast<CTFontDescriptorRef>(CFArrayGetValueAtIndex(array.get(), i));
+                auto postScriptName = adoptCF(static_cast<CFStringRef>(CTFontDescriptorCopyAttribute(candidate, kCTFontNameAttribute)));
+                if (CFStringCompare(postScriptName.get(), desiredName.get(), 0) == kCFCompareEqualTo) {
+                    fontDescriptor = candidate;
+                    break;
+                }
+            }
+        }
+    }
+    if (!fontDescriptor)
+        fontDescriptor = static_cast<CTFontDescriptorRef>(CFArrayGetValueAtIndex(array.get(), 0));
 #else
-    UNUSED_PARAM(index);
+    UNUSED_PARAM(itemInCollection);
     fontDescriptor = adoptCF(CTFontManagerCreateFontDescriptorFromData(bufferData.get()));
-#endif
     if (!fontDescriptor)
         return nullptr;
+#endif
 
     return std::make_unique<FontCustomPlatformData>(fontDescriptor.get());
 }
